fix: small screen resolution could scroll into overflow of animated background refactor: refactorabout file via vscode >format

--- a/src/assets/sass/components/_animatedBg.scss
+++ b/src/assets/sass/components/_animatedBg.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   margin-bottom: -20px;
-  // overflow: hidden;
+  overflow: hidden;
 
   & li {
     position: absolute;
